Fix buildx cache error 2

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,8 +3,6 @@ name: CI/CD Pipeline
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
   build-and-push:
@@ -17,13 +15,8 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
     
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
-    
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
-      with:
-        driver: docker-container
     
     - name: Login to GHCR
       uses: docker/login-action@v3
@@ -38,7 +31,5 @@ jobs:
         context: .
         push: true
         tags: |
-          ghcr.io/${{ github.repository_owner }}/qr-generator:latest
-          ghcr.io/${{ github.repository_owner }}/qr-generator:${{ github.sha }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
+          ghcr.io/${{ github.repository_owner }}/qrator:latest
+          ghcr.io/${{ github.repository_owner }}/qrator:${{ github.sha }}
